--- a/compose.yml
+++ b/compose.yml
@@ -3,12 +3,12 @@ version: "3"
 services:
  devopsdb:
    container_name: devopsdb
-   image: shaikmustafa/valluri:dbimage
+   image: prasa239/dbimage:v1
    ports:
      - "3306:3306"
 
  application:
-   image: shaikmustafa/valluri:appimage
+   image: prasa239/appimage:v1
    container_name: containerapp
    ports:
      - "1234:8080"
