--- a/compose.yml
+++ b/compose.yml
@@ -2,7 +2,8 @@ services:
  appservice: 
     container-name: devops-cont 
     build: ./Devops-app 
-    ports: - "1111:80" 
+    ports: 
+       - "1111:80" 
     volumes: 
        -appvolume: ./Devops-app 
     network: 
@@ -11,7 +12,8 @@ services:
  dbservice:
     container-name: devops-db-cont 
     build: ./Devops-db 
-    ports: - "2222:80" 
+    ports: 
+       - "2222:80" 
     volumes: 
        -dbvolume: ./Devops-db 
     network: 
