--- a/compose.yml
+++ b/compose.yml
@@ -5,7 +5,7 @@ services:
     ports: 
        - "1111:80" 
     volumes: 
-       - appvolume:./Devops-app 
+       - appvolume:/Devops-app/myvolume 
     networks: 
        - appnetwork 
        - dbnetwork
@@ -15,7 +15,7 @@ services:
     ports: 
        - "2222:80" 
     volumes: 
-       - dbvolume:./Devops-db 
+       - dbvolume:/Devops-db/myvolume 
     networks: 
         - dbnetwork 
         - appnetwork
